--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -18,7 +19,8 @@
     "react-modal": "^3.16.1",
     "react-scroll": "^1.9.0",
     "scroll-animator": "^4.0.0",
-    "unsplash-js": "^7.0.19"
+    "unsplash-js": "^7.0.19",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
